# gl-experiments

./: pyproject.toml
.github/workflows/: build_and_test.yml
src/customgl/: first_opengl_quad.py  framebuffer_objects.py  main.kv  main.py  main2.py  shadow_mapping.py  test.py  test2.py  test_tbn.py
src/customgl/drawing/: customframebuffer.py  glmaterial.py  objectviews.py  openglrenderer.py  shader.py
src/customgl/drawing/shaders/: main.frag  main.vert  point_shadow.frag  point_shadow.geom  point_shadow.vert  shadow.frag  shadow.vert  simple.frag  simple.vert  simple_with_perspective.frag  simple_with_perspective.vert
src/customgl/helper/: windowsscaling.py
src/customgl/objects/: camera.py  material.py  objects3d.py  rolling_sphere.py  surface.py  transformations.py
src/customgl/scenes/: scene.py
src/rattle/: rattle.py  rattle_solver.py
tests/unit_tests/: test_material.py
