[project]
name = "custom_opengl_experiments"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "pyopengl",
  "PyQt6",
  "numpy",
  "imageio",
  "Pillow",
  "matplotlib"
]

[dependency-groups]
build = [
    "build"
]
test = [
    "pytest == 8.2.0"
]
lint = [
    "black",
    "pylint"
]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
shadow_mapping = "customgl.shadow_mapping:main"
framebuffer_objects = "customgl.framebuffer_objects:main"
first_opengl_quad = "customgl.first_opengl_quad:main"

[tool.setuptools.package-data]
customgl = ["textures/**/*.png", "textures/**/*.jpg", "drawing/shaders/*.vert", "drawing/shaders/*.geom", "drawing/shaders/*.frag"]

[tool.pytest.ini_options]
testpaths =  ["tests"]

[tool.black]
line-length = 145

[tool.pylint.format]
max-line-length = 145

[tool.pylint.basic]
# Allow specific variable names
good-names = ["initializeGL",
              "paintGL",
              "resizeGL",
              "mouseDoubleClickEvent",
              "wheelEvent",
              "mouseReleaseEvent",
              "mouseMoveEvent"
]